--- a/azure-pipelines/templates/debian-mirror-stages.yml
+++ b/azure-pipelines/templates/debian-mirror-stages.yml
@@ -1,71 +1,57 @@
 stages:
-- stage: Build
-  variables:
-    MIRROR_COMPONENTS: 'contrib,non-free,main'
-    MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
+- stage: InitStage
   jobs:
-  - template: ../templates/jobs-template.yml
+  - job: InitJob
+    steps:
+    - template: debian-mirror-init.yml
+- stage: PublishToPrimaryStage
+  variables:
+    PublishToReplica: y
+  jobs:
+  - template: debian-mirror-jobs-publish-mirror.yml
     parameters:
-      preSteps:
-      - script: |
-          echo "prestep1"
-          echo "JobVar1=$JobVar1"
-          echo "JOB_NAME=$JOB_NAME"
-          echo "TestNAME=$TestNAME"
-          echo "TestNAME=$(TestNAME)"
-          echo "TESTNAME=$(TESTNAME)"
-          echo "MIRROR_COMPONENTS=$MIRROR_COMPONENTS"
-          echo "StorageAccountReplica=$(StorageAccountReplica)"
-          echo "StorageAccount=$(StorageAccount)"
-          echo "MIRROR_ARICHTECTURES=$MIRROR_ARICHTECTURES"
-          echo "ScriptEnv1=$ScriptEnv1"
-          echo "MIRROR_NAME=$MIRROR_NAME"
-          echo "MIRROR_FILESYSTEM=$MIRROR_FILESYSTEM"
-          echo "MIRROR_ARICHTECTURES=$MIRROR_ARICHTECTURES"
-      postSteps:
-      - script: |
-          echo "poststep1"
-      scriptEnv:
-        ScriptEnv1: env1
-      stepGroups:
-      - name: jessie
-        script: |
-          echo "ScriptEnv1=$ScriptEnv1"
-          echo "JobVar2=$JobVar2"
-        variables:
-          MIRROR_NAME: jessie
-          MIRROR_FILESYSTEM: debian
-          MIRROR_URL: 'http://deb.debian.org/debian'
-          MIRROR_DISTRIBUTIONS: 'jessie,jessie-updates'
-          MIRROR_ARICHTECTURES: 'amd64,armhf'
-      - name: stretch
-        variables:
-          MIRROR_NAME: stretch
-          MIRROR_FILESYSTEM: debian
-          MIRROR_URL: 'http://deb.debian.org/debian'
-          MIRROR_DISTRIBUTIONS: 'stretch,stretch-updates,stretch-backports'
-      - name: buster
-        variables:
-          MIRROR_NAME: buster
-          MIRROR_FILESYSTEM: debian
-          MIRROR_URL: 'http://deb.debian.org/debian'
-          MIRROR_DISTRIBUTIONS: 'buster,buster-updates,buster-backports'
-      - name: jessie_security
-        variables:
-          MIRROR_NAME: debian-security
-          MIRROR_FILESYSTEM: debian-security
-          MIRROR_URL: 'http://security.debian.org/debian-security'
-          MIRROR_DISTRIBUTIONS: 'jessie/updates'
-          MIRROR_ARICHTECTURES: 'amd64,armhf'
-      - name: stretch_security
-        variables:
-          MIRROR_NAME: stretch-security
-          MIRROR_FILESYSTEM: debian-security
-          MIRROR_URL: 'http://security.debian.org/debian-security'
-          MIRROR_DISTRIBUTIONS: 'stretch/updates'
-      - name: buster_security
-        variables:
-          MIRROR_NAME: buster-security
-          MIRROR_FILESYSTEM: debian-security
-          MIRROR_URL: 'http://security.debian.org/debian-security'
-          MIRROR_DISTRIBUTIONS: 'buster/updates'
+      publishToReplica: y
+- stage: MigrateReplicaStage
+  dependsOn:
+  - InitStage
+  - PublishToReplicaStage
+  condition: succeeded()
+  variables:
+  - name: MirrorVersion
+    value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MirrorVersion'] ]
+  - name: PublishToReplica
+    value: 'n'
+  jobs:
+  - job: MigrateReplica
+    steps:
+    - script: echo skip
+    #- template: ../templates/debian-mirror-migrate-replica.yml
+- stage: PublishToPrimaryStage
+  variables:
+    PublishToReplica: n
+  jobs:
+  - template: debian-mirror-stage-publish-mirror.yml
+    parameters:
+      publishToReplica: n
+- stage: MigratePrimaryStage
+  dependsOn:
+  - MigrateReplicaStage
+  - PublishToPrimaryStage
+  condition: and(succeeded(), eq(stageDependencies.MigrateReplicaStage.outputs['MigrateReplica.CheckVersion.MigrateCdnReplica'], 'y'))
+  variables:
+  - name: PublishToReplica
+    value: 'n'
+  - name: MigrateCdnReplica
+    value: 'y'
+  jobs:
+  - job: MigratePrimary
+    steps:
+    - script: echo skip
+    #- template: ../templates/debian-mirror-migrate-primary.yml
+- stage: CleanUp
+  condition: always()
+  jobs:
+  - job: CleanUp
+    steps:
+    - script: echo skip
+    - template: ../templates/debian-mirror-cleanup.yml
