--- a/azure-pipelines/templates/jobs-template.yml
+++ b/azure-pipelines/templates/jobs-template.yml
@@ -15,6 +15,9 @@ parameters:
     variables: ''
     script: ''
     steps: []
+- name: 'jobVariables'
+  type: object
+  default: ''
 - name: 'scriptEnv'
   type: object
   default: ''
@@ -28,6 +31,8 @@ jobs:
       timeoutInMinutes: ${{ parameters.timeoutInMinutes }}
       variables:
         JOB_NAME: ${{ build.name }}
+        ${{ if ne(parameters.jobvariables, '') }}:
+          ${{ parameters.jobVariables }}
         ${{ if ne(build.variables, '') }}:
           ${{ build.variables }}
       steps:
