--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -16,7 +16,7 @@ jobs:
         nfsMountPoint: '/$(NFSName)'
     - script: |
         echo "pre-step"
-        MirrorNames=${{ join(',', parameters.mirrorNames) }}
+        MirrorNames=${{ join(',', parameters.stepGroups) }}
         echo "MirrorNames=$MirrorNames"
         #echo "$MirrorNames" > work/_aptly/mirror_names
       displayName: 'pre-step'
