--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -38,6 +38,7 @@ jobs:
         echo "poststep1"
     scriptEnv:
       ScriptEnv1: env1
+    stepGroups:
     - name: jessie
       script: |
         echo "ScriptEnv1=$ScriptEnv1"
