--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -17,22 +17,17 @@ jobs:
     - script: |
         echo "pre-step"
         echo "GROUP_NAME=$GROUP_NAME"
-        #echo "$MirrorNames" > work/_aptly/mirror_names
+        echo "GROUP_NAMES=$GROUP_NAMES"
+        echo "$MIRROR_NAME" >> work/_aptly/mirror_names
       displayName: 'pre-step'
     - script: |
-        echo "prestep1"
-        echo "JobVar1=$JobVar1"
-        echo "JOB_NAME=$JOB_NAME"
-        echo "TestNAME=$TestNAME"
-        echo "TestNAME=$(TestNAME)"
-        echo "TESTNAME=$(TESTNAME)"
-        echo "MIRROR_COMPONENTS=$MIRROR_COMPONENTS"
         echo "StorageAccountReplica=$(StorageAccountReplica)"
         echo "StorageAccount=$(StorageAccount)"
-        echo "MIRROR_ARICHTECTURES=$MIRROR_ARICHTECTURES"
-        echo "ScriptEnv1=$ScriptEnv1"
         echo "MIRROR_NAME=$MIRROR_NAME"
         echo "MIRROR_FILESYSTEM=$MIRROR_FILESYSTEM"
+        echo "MIRROR_URL=$MIRROR_URL"
+        echo "MIRROR_DISTRIBUTIONS=$MIRROR_DISTRIBUTIONS"
+        echo "MIRROR_COMPONENTS=$MIRROR_COMPONENTS"
         echo "MIRROR_ARICHTECTURES=$MIRROR_ARICHTECTURES"
     postSteps:
     - script: |
