--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -18,7 +18,7 @@ jobs:
         echo "pre-step"
         echo "GROUP_NAME=$GROUP_NAME"
         echo "GROUP_NAMES=$GROUP_NAMES"
-        echo "$MIRROR_NAME" >> work/_aptly/mirror_names
+        echo "$GROUP_NAMES" > work/_aptly/mirror_names
       displayName: 'pre-step'
     - script: |
         echo "StorageAccountReplica=$(StorageAccountReplica)"
