--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -15,30 +15,21 @@ jobs:
         mirrorName: $(GROUP_NAME)
         nfsMountPoint: '/$(NFSName)'
     - script: |
-        echo "pre-step"
-        echo "GROUP_NAME=$GROUP_NAME"
-        echo "GROUP_NAMES=$GROUP_NAMES"
-        echo "$GROUP_NAMES" > work/_aptly/mirror_names
-      displayName: 'pre-step'
-    - script: |
         echo "StorageAccountReplica=$(StorageAccountReplica)"
         echo "StorageAccount=$(StorageAccount)"
-        echo "MIRROR_NAME=$MIRROR_NAME"
         echo "MIRROR_FILESYSTEM=$MIRROR_FILESYSTEM"
         echo "MIRROR_URL=$MIRROR_URL"
         echo "MIRROR_DISTRIBUTIONS=$MIRROR_DISTRIBUTIONS"
         echo "MIRROR_COMPONENTS=$MIRROR_COMPONENTS"
         echo "MIRROR_ARICHTECTURES=$MIRROR_ARICHTECTURES"
-    postSteps:
-    - script: |
-        echo "poststep1"
-    scriptEnv:
-      ScriptEnv1: env1
+        echo "GROUP_NAME=$GROUP_NAME"
+        echo "GROUP_NAMES=$GROUP_NAMES"
+        echo "$GROUP_NAMES" > work/_aptly/mirror_names
+      displayName: 'Pre-steep'
+    - scirpt: |
+        azure-pipelines/scripts/mirror/publish-debian-mirror-2.sh "$(CreateDB)" "GROUP_NAME"
     stepGroups:
     - name: jessie
-      script: |
-        echo "ScriptEnv1=$ScriptEnv1"
-        echo "JobVar2=$JobVar2"
       variables:
         MIRROR_FILESYSTEM: debian
         MIRROR_URL: 'http://deb.debian.org/debian'
