--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -25,9 +25,10 @@ jobs:
         echo "GROUP_NAME=$GROUP_NAME"
         echo "GROUP_NAMES=$GROUP_NAMES"
         echo "$GROUP_NAMES" > work/_aptly/mirror_names
-      displayName: 'Pre-steep'
-    - scirpt: |
+      displayName: 'Pre-step'
+    - script: |
         azure-pipelines/scripts/mirror/publish-debian-mirror-2.sh "$(CreateDB)" "GROUP_NAME"
+      displayName: 'Publish Mirror'
     stepGroups:
     - name: jessie
       variables:
