--- a/azure-pipelines/mirrors/publish-debian-mirror-useast.yml
+++ b/azure-pipelines/mirrors/publish-debian-mirror-useast.yml
@@ -81,7 +81,7 @@ stages:
     steps:
     - template: ../templates/debian-mirror-migrate-primary.yml
 - stage: CleanUp
-  condition: always()
+  condition: succeeded('InitStage')
   jobs:
   - job: CleanUp
     steps:
