--- a/azure-pipelines/templates/debian-mirror-stages.yml
+++ b/azure-pipelines/templates/debian-mirror-stages.yml
@@ -51,7 +51,7 @@ stages:
     steps:
     - template: ../templates/debian-mirror-migrate-primary.yml
 - stage: CleanUp
-  condition: always()
+  condition: succeeded('InitStage')
   jobs:
   - job: CleanUp
     steps:
