--- a/azure-pipelines/templates/debian-mirror-stages.yml
+++ b/azure-pipelines/templates/debian-mirror-stages.yml
@@ -54,7 +54,7 @@ stages:
   dependsOn:
   - InitStage
   - MigratePrimaryStage
-  condition: succeeded('InitStage')
+  condition: always()
   jobs:
   - job: CleanUp
     steps:
