--- a/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
+++ b/azure-pipelines/templates/debian-mirror-jobs-publish-mirror.yml
@@ -27,7 +27,7 @@ jobs:
         echo "GROUP_NAMES=$GROUP_NAMES"
         echo "UpdateMirror=$(UpdateMirror)"
         echo "$GROUP_NAMES" > work/_aptly/mirror_names
-      displayName: 'Pre-step'
+      displayName: 'Print Parameters'
     - script: |
         azure-pipelines/scripts/mirror/publish-debian-mirror.sh "$(CreateDB)" "$GROUP_NAME"
       env:
