--- a/azure-pipelines/templates/jobs-template-test.yml
+++ b/azure-pipelines/templates/jobs-template-test.yml
@@ -28,7 +28,7 @@ jobs:
 - ${{ each jobGroup in parameters.jobGroups }}:
   - ${{ if or(eq(parameters.jobFilter, ''), containsValue(parameters.jobFilter, jobGroup.name)) }}:
     - job: |
-        ${{ replace(format('{0}{1}', jobGroup.name, '.ext')), '-', '_') }}
+        ${{ replace(format('{0}{1}', jobGroup.name, '.ext'), '-', '_') }}
       ${{ each pair in jobGroup }}:
         ${{ if not(in(pair.key, 'job', 'name', 'variables', 'steps', 'script', 'scriptEnv')) }}:
           ${{ pair.key }}: ${{ pair.value }}
