--- a/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
+++ b/.azure-pipelines/azure-pipelines-UpgrateVersion.yml
@@ -17,7 +17,9 @@ pool: sonicbld
 stages:
 - stage: Build
   jobs:
-  - template: azure-pipelines-build.yml 
+  - template: azure-pipelines-build.yml
+    parameters:
+      buildSlave: y
 - stage: UpgradeVersions
   jobs:
   - job: UpgradeVersions
