--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -5,6 +5,9 @@ parameters:
 - name: 'buildOptions'
   type: string
   default: 'SONIC_CONFIG_BUILD_JOBS=1'
+- name: 'buildSlave'
+  type: string
+  default: 'n'
 jobs:
 - template: azure-pipelines-job-groups.yml
   parameters:
@@ -12,6 +15,9 @@ jobs:
     preSteps:
       - script: |
           sudo rm -rf *
+          if [ "${{ parameters.buildSlave }}" == "y" ]; then
+            docker rmi $(docker images 'sonic-slave-*' -a -q)
+          fi
         displayName: 'Init'
       - checkout: self
         submodules: recursive
